--- a/temporal-testing/build.gradle
+++ b/temporal-testing/build.gradle
@@ -17,9 +17,14 @@ dependencies {
     api project(':temporal-sdk')
     api project(':temporal-test-server')
 
+    // This dependency is included in temporal-sdk module as optional with compileOnly scope.
+    // To make things easier for users, it's helpful for the testing module to bring this dependency
+    // transitively as most users work with history jsons in tests.
+    implementation "com.jayway.jsonpath:json-path:$jsonPathVersion"
+
     junit4Api 'junit:junit:4.13.2'
 
-    junit5Api platform('org.junit:junit-bom:5.9.0')
+    junit5Api platform('org.junit:junit-bom:5.9.1')
     junit5Api 'org.junit.jupiter:junit-jupiter-api'
 
     testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter'
