Fixing test dynamicconfig

--- a/docker/buildkite/dynamicconfig/development.yaml
+++ b/docker/buildkite/dynamicconfig/development.yaml
@@ -2,3 +2,4 @@ system.forceSearchAttributesCacheRefreshOnRead:
   - value: true
 system.enableActivityEagerExecution:
   - value: true
+    constraints: {}
