--- a/docker/buildkite/dynamicconfig/development.yaml
+++ b/docker/buildkite/dynamicconfig/development.yaml
@@ -1,2 +1,5 @@
 system.forceSearchAttributesCacheRefreshOnRead:
   - value: true
+system.enableActivityEagerExecution:
+  - value: true
+    constraints: {}
