Update API protos to 1.12

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "temporal-serviceclient/src/main/proto"]
 	path = temporal-serviceclient/src/main/proto
 	url = https://github.com/temporalio/api.git
+	hexsha = ddf07ab9933e8230309850e3c579e1ff34b03f53
