--- a/gradle/versioning.gradle
+++ b/gradle/versioning.gradle
@@ -8,11 +8,14 @@ ext.getTag = { ->
     return stdout.toString().trim().substring(1)
 }
 
-// 0.20.1-g000a42a -> 0.21.0-SNAPSHOT
-// 0.20.0-RC1-1-g000a42a -> 0.20.0-RC2-1-SNAPSHOT
-// 0.20.1-some-postfix-2-g000a42a -> 0.21.0-some-postfix-SNAPSHOT
-// 0.20.0 -> 0.20.0
-// Used to name jar files
+// Determine a version name based on git tag. It is used to name JAR files
+// The following rules applies:
+// 0.20.2 -> 0.20.2
+// 0.20.2-RC1 -> 0.20.2-RC1
+// 0.20.2-g000a42a -> 0.21.0-SNAPSHOT
+// 0.20.2-somepostfix-g000a42a -> 0.21.0-SNAPSHOT
+// 0.20.2-RC1-g000a42a -> 0.20.2-SNAPSHOT
+// 0.20.2-RC1-somepostfix-g000a42a -> 0.20.2-SNAPSHOT
 ext.getVersionName = { ->
     String tag = getTag()
 
@@ -22,11 +25,10 @@ ext.getVersionName = { ->
 
     if (git) {
         if (rc) {
-            return "${major}.${minor}.${patch}-RC${(rc as int) + 1}${extra}-SNAPSHOT";
+            return "${major}.${minor}.${patch}-RC${(rc as int) + 1}-SNAPSHOT";
         } else {
-            return "${major}.${(minor as int) + 1}.0${extra}-SNAPSHOT";
+            return "${major}.${(minor as int) + 1}.0-SNAPSHOT";
         }
-
     } else {
         return tag
     }
