--- a/temporal-spring-boot-starter-alpha/build.gradle
+++ b/temporal-spring-boot-starter-alpha/build.gradle
@@ -1,6 +1,11 @@
 description = '''Spring Boot Starter for Temporal Java SDK'''
 
 dependencies {
+    // This platform is the same defined in temporal-spring-boot-autoconfigure-alpha and it doesn't need to be here
+    // for gradle, but it is needed for maven and maven pom. Looks like Maven doesn't transitively propagate BOMs.
+    // https://github.com/temporalio/sdk-java/issues/1479
+    api(platform("org.springframework.boot:spring-boot-dependencies:$springBootVersion"))
+
     api project(':temporal-spring-boot-autoconfigure-alpha')
     implementation "org.springframework.boot:spring-boot-starter"
 }
