--- a/docker/buildkite/Dockerfile-JDK8
+++ b/docker/buildkite/Dockerfile-JDK8
@@ -1,4 +1,4 @@
-FROM openjdk:8-slim
+FROM eclipse-temurin:11-focal
 
 # Git is needed in order to update the dls submodule
 RUN apt-get update && apt-get install -y protobuf-compiler git
