--- a/temporal-spring-boot-autoconfigure-alpha/build.gradle
+++ b/temporal-spring-boot-autoconfigure-alpha/build.gradle
@@ -1,8 +1,8 @@
 description = '''Spring Boot AutoConfigure for Temporal Java SDK'''
 
 ext {
-    otelVersion = '1.19.0'
-    otShimVersion = '1.19.0-alpha'
+    otelVersion = '1.20.0'
+    otShimVersion = "${otelVersion}-alpha"
 }
 
 dependencies {
