--- a/build.gradle
+++ b/build.gradle
@@ -31,9 +31,9 @@ ext {
     // Platforms
     grpcVersion = '1.51.0' // [1.34.0,)
     jacksonVersion = '2.14.0' // [2.9.0,)
-    micrometerVersion = '1.9.5' // [1.0.0,)
+    micrometerVersion = '1.9.6' // [1.0.0,) // we don't upgrade to 1.10.x because it requires kotlin 1.6. Users may use 1.10.x in their environments though.
 
-    slf4jVersion = '1.7.36' // [1.4.0,) // stay on 1.x for a while to don't use any APIs from 2.x which may break our users which decide on 1.x
+    slf4jVersion = '1.7.36' // [1.4.0,) // stay on 1.x for a while to don't use any APIs from 2.x which may break our users which stay on 1.x
     protoVersion = '3.21.9' // [3.10.0,)
     annotationApiVersion = '1.3.2'
     guavaVersion = '31.1-jre' // [10.0,)
@@ -46,7 +46,7 @@ ext {
     springBootVersion = '2.7.5'// [2.4.0,)
 
     // test scoped
-    logbackVersion = '1.2.11'
+    logbackVersion = '1.2.11' // we don't upgrade to 1.3 and 1.4 because they require slf4j 2.x
     mockitoVersion = '4.9.0'
     junitVersion = '4.13.2'
 }
