Add generated proto classes info into javadoc jar
Issue #1532

--- a/temporal-serviceclient/build.gradle
+++ b/temporal-serviceclient/build.gradle
@@ -99,6 +99,11 @@ sourcesJar {
     from(file("$buildDir/generated/main/java"))
 }
 
+javadocJar {
+    dependsOn 'generateProto'
+    from(file("$buildDir/generated/main/java"))
+}
+
 idea {
     module {
         sourceDirs += file("$buildDir/generated/main/java")
