--- a/temporal-serviceclient/build.gradle
+++ b/temporal-serviceclient/build.gradle
@@ -12,7 +12,7 @@ dependencies {
     api "io.grpc:grpc-api" //Classes like io.grpc.Metadata are used as a part of our API
     api "io.grpc:grpc-stub" //Part of WorkflowServiceStubs API
     api "io.grpc:grpc-netty-shaded" //Part of WorkflowServiceStubs API, specifically SslContext
-    api "io.grpc:grpc-services" //Stardard gRPC HealthCheck Response class
+    api "io.grpc:grpc-services" //Standard gRPC HealthCheck Response class
     api "com.google.protobuf:protobuf-java-util:$protoVersion" //proto request and response objects are a part of this module's API
     if (JavaVersion.current().isJava9Compatible()) {
         //needed for the generated grpc stubs and is not a part of JDK since java 9
@@ -57,7 +57,7 @@ protobuf {
     // For aarch64 (M1) using oldest version with binary available for this platform
     if (System.getProperty("os.arch") == 'aarch64') {
         protoc {
-            artifact = 'com.google.protobuf:protoc:3.21.9'
+            artifact = 'com.google.protobuf:protoc:3.21.10'
         }
         plugins {
             grpc {
