--- a/temporal-test-server/build.gradle
+++ b/temporal-test-server/build.gradle
@@ -9,7 +9,7 @@ plugins {
     id 'application'
     id 'com.palantir.graal' version "${graalVersion}"
     id 'com.palantir.docker' version '0.34.0'
-    id 'com.google.protobuf' version '0.8.19'
+    id 'com.google.protobuf' version '0.9.2'
 }
 
 apply plugin: 'idea' // IntelliJ plugin to see files generated from protos
@@ -54,6 +54,15 @@ jar {
     }
 }
 
+// Needed to include generated files into the source jar
+sourcesJar {
+    dependsOn 'generateProto'
+    from(file("$buildDir/generated/main/java"))
+        // Solves: "Entry gogoproto/Gogo.java is a duplicate but no duplicate handling strategy has been set.
+        // Please refer to https://docs.gradle.org/7.6/dsl/org.gradle.api.tasks.Copy.html#org.gradle.api.tasks.Copy:duplicatesStrategy for details."
+        .setDuplicatesStrategy(DuplicatesStrategy.EXCLUDE)
+}
+
 protobuf {
     // version/variables substitution is not supported in protobuf section.
     // protoc and protoc-gen-grpc-java versions are selected to be compatible
@@ -93,12 +102,6 @@ clean {
 
 protobuf {
     generatedFilesBaseDir = "$buildDir/generated"
-}
-
-// Needed to include generated files into the source jar
-sourcesJar {
-    dependsOn 'generateProto'
-    from(file("$buildDir/generated/main/java"))
 }
 
 idea {
