--- a/.github/workflows/features.yml
+++ b/.github/workflows/features.yml
@@ -1,9 +1,9 @@
-name: "SDK Features Integration Tests"
+name: "Features Integration Tests"
 on: [push, pull_request]
 
 jobs:
-  sdk-features-test:
-    uses: temporalio/sdk-features/.github/workflows/java.yaml@main
+  features-test:
+    uses: temporalio/features/.github/workflows/java.yaml@main
     with:
       java-repo-path: ${{github.event.pull_request.head.repo.full_name}}
       version: ${{github.event.pull_request.head.ref}}
