--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     ext {
         palantirGitVersionVersion = "${JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_11) ? '0.15.0' : '0.13.0'}"
-        kotlinVersion = "${JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_16) ? '1.5.32' : '1.4.32'}"
+        kotlinVersion = "${project.hasProperty("edgeDepsTest") ? '1.8.0' : (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_16) ? '1.5.32' : '1.4.32')}"
     }
 }
 
@@ -16,7 +16,8 @@ plugins {
     //    id 'org.jetbrains.kotlin.jvm' version '1.4.32'
     //    id 'org.jetbrains.kotlin.jvm' version '1.5.32'
     //    id 'org.jetbrains.kotlin.jvm' version '1.6.21'
-    //    id 'org.jetbrains.kotlin.jvm' version '1.7.20'
+    //    id 'org.jetbrains.kotlin.jvm' version '1.7.22'
+    //    id 'org.jetbrains.kotlin.jvm' version '1.8.0'
     id 'org.jetbrains.kotlin.jvm' version "${kotlinVersion}" apply false
     id 'base'
 }
@@ -31,9 +32,12 @@ ext {
     // Platforms
     grpcVersion = '1.52.1' // [1.34.0,)
     jacksonVersion = '2.14.1' // [2.9.0,)
-    micrometerVersion = '1.9.6' // [1.0.0,) // we don't upgrade to 1.10.x because it requires kotlin 1.6. Users may use 1.10.x in their environments though.
+    // we don't upgrade to 1.10.x because it requires kotlin 1.6. Users may use 1.10.x in their environments though.
+    micrometerVersion = project.hasProperty("edgeDepsTest") ? '1.10.3' : '1.9.7' // [1.0.0,)
 
-    slf4jVersion = '1.7.36' // [1.4.0,) // stay on 1.x for a while to don't use any APIs from 2.x which may break our users which stay on 1.x
+    // stay on 1.x for a while to don't use any APIs from 2.x which may break our users which still stay on 1.x
+    // also slf4j 2.x is not compatible with spring boot 2.x
+    slf4jVersion = project.hasProperty("edgeDepsTest") ? '2.0.6' : '1.7.36' // [1.4.0,)
     protoVersion = '3.21.12' // [3.10.0,)
     annotationApiVersion = '1.3.2'
     guavaVersion = '31.1-jre' // [10.0,)
@@ -43,10 +47,13 @@ ext {
 
     jsonPathVersion = '2.7.0' // compileOnly
 
-    springBootVersion = '2.7.8'// [2.4.0,)
+    // Spring Boot 3 requires Java 17, java-sdk builds against 2.x version because we support Java 8.
+    // We do test compatibility with Spring Boot 3 in integration tests.
+    springBootVersion = project.hasProperty("edgeDepsTest") ? '3.0.2' : '2.7.8'// [2.4.0,)
 
     // test scoped
-    logbackVersion = '1.2.11' // we don't upgrade to 1.3 and 1.4 because they require slf4j 2.x
+    // we don't upgrade to 1.3 and 1.4 because they require slf4j 2.x
+    logbackVersion = project.hasProperty("edgeDepsTest") ? '1.3.5' : '1.2.11'
     mockitoVersion = '5.0.0'
     junitVersion = '4.13.2'
 }
