Eager Workflow Task Dispatch
Issue #1646

Signed-off-by: Dmitry Spikhalskiy <dmitry@spikhalskiy.com>

--- a/docker/buildkite/dynamicconfig/development.yaml
+++ b/docker/buildkite/dynamicconfig/development.yaml
@@ -3,3 +3,6 @@ system.forceSearchAttributesCacheRefreshOnRead:
 system.enableActivityEagerExecution:
   - value: true
     constraints: {}
+system.enableEagerWorkflowStart:
+  - value: true
+    constraints: {}
