New temporal-shaded module that shades grpc, protobuf, guava

--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,8 @@ ext {
 
     jsonPathVersion = '2.7.0' // compileOnly
 
+    cronUtilsVersion = '9.2.0' // for test server only
+
     // Spring Boot 3 requires Java 17, java-sdk builds against 2.x version because we support Java 8.
     // We do test compatibility with Spring Boot 3 in integration tests.
     springBootVersion = project.hasProperty("edgeDepsTest") ? '3.0.2' : '2.7.8'// [2.4.0,)
