--- a/settings.gradle
+++ b/settings.gradle
@@ -8,3 +8,4 @@ include 'temporal-kotlin'
 include 'temporal-spring-boot-autoconfigure-alpha'
 include 'temporal-spring-boot-starter-alpha'
 include 'temporal-remote-data-encoder'
+include 'temporal-shaded'
