--- a/gradle/publishing.gradle
+++ b/gradle/publishing.gradle
@@ -15,7 +15,10 @@ subprojects {
     publishing {
         publications {
             mavenJava(MavenPublication) {
-                from components.java
+                afterEvaluate {
+                    if (tasks.findByName("shadowJar") != null) artifact shadowJar
+                    from components.java
+                }
             }
         }
         // to test local publishing use ./gradlew publish and comment nexusPublishing
