--- a/temporal-opentracing/build.gradle
+++ b/temporal-opentracing/build.gradle
@@ -5,14 +5,11 @@ ext {
 }
 
 dependencies {
-    api project(':temporal-sdk')
+    // this module shouldn't carry temporal-sdk with it, especially for situations when users may be using a shaded artifact
+    compileOnly project(':temporal-sdk')
     api group: 'io.opentracing', name: 'opentracing-api', version: "$opentracingVersion"
 
-    implementation ("com.google.guava:guava:$guavaVersion") {
-        exclude group: 'com.google.code.findbugs'
-        exclude group: 'com.google.errorprone'
-        exclude group: 'com.google.j2objc'
-    }
+    implementation "com.google.guava:guava:$guavaVersion"
     implementation group: 'io.opentracing', name: 'opentracing-util', version: "$opentracingVersion"
 
     testImplementation project(":temporal-testing")
