--- a/temporal-spring-boot-autoconfigure-alpha/build.gradle
+++ b/temporal-spring-boot-autoconfigure-alpha/build.gradle
@@ -9,7 +9,7 @@ dependencies {
     api(platform("org.springframework.boot:spring-boot-dependencies:$springBootVersion"))
     api(platform("io.opentelemetry:opentelemetry-bom:$otelVersion"))
 
-    api project(':temporal-sdk')
+    compileOnly project(':temporal-sdk')
     compileOnly project(':temporal-testing')
 
     api "org.springframework.boot:spring-boot-autoconfigure"
@@ -20,7 +20,7 @@ dependencies {
 
     if (JavaVersion.current().isJava9Compatible()) {
         //needed for the generated grpc stubs and is not a part of JDK since java 9
-        implementation "javax.annotation:javax.annotation-api:$annotationApiVersion"
+        compileOnly "javax.annotation:javax.annotation-api:$annotationApiVersion"
     }
 
     // this dependency is not mandatory for the module to work, but it provides a better IDE experience developing the module
