--- a/temporal-test-server/build.gradle
+++ b/temporal-test-server/build.gradle
@@ -16,19 +16,11 @@ apply plugin: 'idea' // IntelliJ plugin to see files generated from protos
 
 description = '''Temporal test workflow server'''
 
-ext {
-    cronUtilsVersion = '9.2.0'
-}
-
 dependencies {
-    api(platform("io.grpc:grpc-bom:$grpcVersion"))
-
     api project(':temporal-sdk')
-    implementation("io.grpc:grpc-core")
-    implementation("io.grpc:grpc-services")
     if (JavaVersion.current().isJava9Compatible()) {
         //needed for the generated grpc stubs and is not a part of JDK since java 9
-        implementation "javax.annotation:javax.annotation-api:$annotationApiVersion"
+        compileOnly "javax.annotation:javax.annotation-api:$annotationApiVersion"
     }
 
     implementation "com.google.guava:guava:$guavaVersion"
@@ -46,7 +38,7 @@ application {
 }
 
 jar {
-    exclude '**.proto'
+    exclude '**/*.proto'
     includeEmptyDirs false
 
     manifest {
