Undo gradle todo & fix errant docstring

--- a/temporal-serviceclient/build.gradle
+++ b/temporal-serviceclient/build.gradle
@@ -68,8 +68,7 @@ protobuf {
         }
     }
     generateProtoTasks {
-        // TODO: Undo this once in master
-//        all().each { task -> task.dependsOn updateSubmodules }
+        all().each { task -> task.dependsOn updateSubmodules }
         all()*.plugins {
             grpc {
                 outputSubDir = 'java'
