Fix premature triggering of eventLoop in case of activity cancellation
Issue #1558

--- a/temporal-serviceclient/build.gradle
+++ b/temporal-serviceclient/build.gradle
@@ -69,6 +69,11 @@ protobuf {
     }
     generateProtoTasks {
         all().each { task -> task.dependsOn updateSubmodules }
+        all()*.builtins {
+            java {
+                option 'annotate_code'
+            }
+        }
         all()*.plugins {
             grpc {
                 outputSubDir = 'java'
