Enable update in CI

--- a/docker/buildkite/dynamicconfig/development.yaml
+++ b/docker/buildkite/dynamicconfig/development.yaml
@@ -6,3 +6,6 @@ system.enableActivityEagerExecution:
 system.enableEagerWorkflowStart:
   - value: true
     constraints: {}
+frontend.enableUpdateWorkflowExecution:
+  - value: true
+    constraints: {}
