Allow task queue names to use property placeholders
To enable more dynamic usage when utilizing the @WorkflowImpl and @ActivityImpl
annotations, along with the workers-auto-discovery feature, this allows the
task queue name values to be Spring property placeholder that will be resolved
and populated by Spring at runtime.

--- a/temporal-spring-boot-autoconfigure-alpha/src/test/resources/application.yml
+++ b/temporal-spring-boot-autoconfigure-alpha/src/test/resources/application.yml
@@ -41,6 +41,18 @@ spring:
 spring:
   config:
     activate:
+      on-profile: auto-discovery-by-task-queue-dynamic-suffix
+  temporal:
+    workers-auto-discovery:
+      packages:
+        - io.temporal.spring.boot.autoconfigure.bytaskqueue
+default-queue:
+  name: PropertyResolverTest
+
+---
+spring:
+  config:
+    activate:
       on-profile: auto-discovery-by-worker-name
   temporal:
     workers:
