Respond to PR comments

--- a/docker/buildkite/dynamicconfig/development.yaml
+++ b/docker/buildkite/dynamicconfig/development.yaml
@@ -9,3 +9,6 @@ system.enableEagerWorkflowStart:
 frontend.enableUpdateWorkflowExecution:
   - value: true
     constraints: {}
+frontend.enableUpdateWorkflowExecutionAsyncAccepted:
+  - value: true
+    constraints: { }
