--- a/docker/buildkite/dynamicconfig/development.yaml
+++ b/docker/buildkite/dynamicconfig/development.yaml
@@ -2,13 +2,13 @@ system.forceSearchAttributesCacheRefreshOnRead:
   - value: true
 system.enableActivityEagerExecution:
   - value: true
-    constraints: {}
 system.enableEagerWorkflowStart:
   - value: true
-    constraints: {}
 frontend.enableUpdateWorkflowExecution:
   - value: true
-    constraints: {}
 frontend.enableUpdateWorkflowExecutionAsyncAccepted:
   - value: true
-    constraints: { }
+frontend.workerVersioningWorkflowAPIs:
+  - value: true
+frontend.workerVersioningDataAPIs:
+  - value: true
