--- a/temporal-kotlin/build.gradle
+++ b/temporal-kotlin/build.gradle
@@ -22,6 +22,7 @@ dependencies {
     compileOnly project(':temporal-sdk')
 
     implementation "org.jetbrains.kotlin:kotlin-reflect"
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.1")
 
     implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310"
     implementation "com.fasterxml.jackson.datatype:jackson-datatype-jdk8"
