--- a/docker/buildkite/dynamicconfig/development.yaml
+++ b/docker/buildkite/dynamicconfig/development.yaml
@@ -12,3 +12,5 @@ frontend.workerVersioningWorkflowAPIs:
   - value: true
 frontend.workerVersioningDataAPIs:
   - value: true
+history.MaxBufferedQueryCount:
+  - value: 100000 
