Fix start-workers config
Signed-off-by: Tihomir Surdilovic <tihomir@temporal.io>

--- a/temporal-spring-boot-autoconfigure-alpha/src/test/resources/application.yml
+++ b/temporal-spring-boot-autoconfigure-alpha/src/test/resources/application.yml
@@ -99,3 +99,14 @@ spring:
       max-instances: 10
       max-threads: 10
 
+---
+spring:
+  config:
+    activate:
+      on-profile: disable-start-workers
+  temporal:
+    workers-auto-discovery:
+      packages:
+        - io.temporal.spring.boot.autoconfigure.bytaskqueue
+    start-workers: false
+
