Revert "Revert configurable slot provider (#2134)"
This reverts commit 46b239d48329114ca7d1ac5d199d0a03ea9d95a2.

--- a/temporal-sdk/build.gradle
+++ b/temporal-sdk/build.gradle
@@ -36,3 +36,16 @@ task registerNamespace(type: JavaExec) {
 }
 
 test.dependsOn 'registerNamespace'
+
+test {
+    useJUnit {
+        excludeCategories 'io.temporal.worker.IndependentResourceBasedTests'
+    }
+}
+
+task testResourceIndependent(type: Test) {
+    useJUnit {
+        includeCategories 'io.temporal.worker.IndependentResourceBasedTests'
+        maxParallelForks = 1
+    }
+}
