Fix dynamic config

--- a/docker/github/dynamicconfig/development.yaml
+++ b/docker/github/dynamicconfig/development.yaml
@@ -4,8 +4,6 @@ system.enableActivityEagerExecution:
   - value: true
 system.enableEagerWorkflowStart:
   - value: true
-system.enableNexus:
-  - value: true
 frontend.enableUpdateWorkflowExecution:
   - value: true
 frontend.enableUpdateWorkflowExecutionAsyncAccepted:
@@ -20,3 +18,11 @@ worker.buildIdScavengerEnabled:
     - value: true
 worker.removableBuildIdDurationSinceDefault:
     - value: 1
+system.enableNexus:
+  - value: true
+component.nexusoperations.callback.endpoint.template:
+  - value: http://localhost:7243/api/v1/namespaces/{{.NamespaceName}}/nexus/callback
+component.callbacks.allowedAddresses:
+  - value:
+      - Pattern: "*"
+        AllowInsecure: true
