Nexus worker support (#2214)
Nexus worker support

--- a/docker/github/dynamicconfig/development.yaml
+++ b/docker/github/dynamicconfig/development.yaml
@@ -18,3 +18,11 @@ worker.buildIdScavengerEnabled:
     - value: true
 worker.removableBuildIdDurationSinceDefault:
     - value: 1
+system.enableNexus:
+  - value: true
+component.nexusoperations.callback.endpoint.template:
+  - value: http://localhost:7243/api/v1/namespaces/{{.NamespaceName}}/nexus/callback
+component.callbacks.allowedAddresses:
+  - value:
+      - Pattern: "localhost:7243"
+        AllowInsecure: true
