Add support for auto discovery of Nexus Services (#2239)
Springboot auto discovery support for NexusServices

--- a/temporal-spring-boot-autoconfigure/src/test/resources/application.yml
+++ b/temporal-spring-boot-autoconfigure/src/test/resources/application.yml
@@ -85,10 +85,12 @@ spring:
       - task-queue: UnitTest
         capacity:
           max-concurrent-workflow-task-executors: 1
+          max-concurrent-nexus-task-executors: 1
           max-concurrent-activity-executors: 1
           max-concurrent-local-activity-executors: 1
           max-concurrent-workflow-task-pollers: 1
           max-concurrent-activity-task-pollers: 1
+          max-concurrent-nexus-task-pollers: 1
         rate-limits:
           max-worker-activities-per-second: 1.0
           max-task-queue-activities-per-second: 1.0
