Add support for virtual workflow threads

--- a/temporal-shaded/build.gradle
+++ b/temporal-shaded/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'com.github.johnrengelman.shadow' version '7.1.2'
+    id 'com.gradleup.shadow' version '8.3.3'
 }
 
 description = '''Temporal Java SDK and Testing Framework with gRPC, Protobuf 3 and Guava shaded'''
